syntax = "proto3";

package guid;

import "google/protobuf/descriptor.proto";

option go_package = "github.com/go-home-admin/go-admin/generate/proto/common/guid";

message TableRequest {
	int64 page = 1;
	int64 pageSize = 2;
}

message TableResponse {
	string api = 1;
	TableData table = 2;
	repeated Column columns = 6;
}

message Column {
	string label = 1;
	string prop = 2;
	string width = 3;
	bool hide = 4;
	bool sortable = 5;
	repeated Filter filters = 6;

}

message TableData {
	uint64 page = 1;
	uint64 pageSize = 2;
	//分析行数据字段结构
	string rows = 3;
	//分析总数字段结构
	uint64 total = 4;
	//分析合计行字段结构
	uint64 summary = 5;
}

message Filter {
	string text = 3;
	string value = 4;
}